--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- HEADER -->
         <calcite-navigation slot="header">
             <calcite-action slot="navigation-action" compact>
-                <img src="NEC-Logo-100x100-1.png" style="width:60px;height:60px;"
+                <img src="JNEC-Logo-100x100-1.png" style="width:60px;height:60px;"
                     alt="JNEC-Logo-100x100-1 logo">
             </calcite-action>
             <calcite-navigation-logo slot="logo" heading="Thimphu Map"
